# spiff-element-units

./: ARENA_INTEGRATION.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml
.github/workflows/: CI.yml
dev/: Dockerfile  _Dockerfile  requirements.txt
module/: Cargo.toml
module/spiff-element-units/: Cargo.toml  pyproject.toml  spiff-element-units.pyi  spiff_element_units.pyi
module/spiff-element-units-rs/: Cargo.toml
module/spiff-element-units-rs/src/: basis.rs  cache.rs  config.rs  decomposer.rs  domain.rs  element_units.rs  error.rs  lib.rs  manifest.rs  parser.rs  reader.rs  specs.rs  writer.rs
module/spiff-element-units/src/: error.rs  lib.rs
scripts/: Makefile  specs_json.py
spiff_element_units/: __init__.py  workflow_spec_creator.py
tests/: test_sanity.py
tests/cache/v1/manual-tasks/: element_unit_map.json  manifest.3d6e91c283fa027feb038b37e9523563be7c97c7caece8fb8acd918958da0aa1.json  manifest.json  our_workflow_specs.json  workflow_spec.json  workflow_specs.json
tests/cache/v1/multiple-call-activities/: manifest.3d6e91c283fa027feb038b37e9523563be7c97c7caece8fb8acd918958da0aa1.json  manifest.d3fd3cdb08cf524138214c8a4de9e4bb278947a1392fbc36f8b8bbc73139c17b.json  manifest.da84423a8787a790205d9da824abf05fc2754ec32307352b6fa2579e19cec956.json  manifest.fdc1ddfd19aff267e710ae55f29194fbf91479ef6c3f004a9e3906fc29e413f7.json  workflow_specs.json
tests/data/: empty-workflow.json
tests/data/sideloaded/: pp1.json
tests/integration/: helper.py  test_cache.py  test_execute.py  test_execute_specs_json.py  test_type_hints.py
(+32 files in other folders)
